--- a/cardzapp/package.json
+++ b/cardzapp/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -35,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:${process.env.PORT || 3001}"
+  "proxy": "http://localhost:3001"
 }
